--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,57 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height:100%;
+  background:linear-gradient(0deg, rgba(255, 0, 150, 0.3), rgba(47, 11, 146, 0.671)), url(./assets/images/galaxy_bg.jpg);
+  background-size: cover;
+  box-shadow: 0px 0px 10px 4px rgba(124, 17, 151, 0.541);
+  @include prefix(background-size, cover, webkit moz ms);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.s-card {
+  margin: 20px;
+}
+
+.s-card-image {
+  border-radius: 10px;
+  width: 300px;
+  height: 480px;
+  box-shadow: 0px 0px 10px 4px rgba(124, 17, 151, 0.541);
+}
+
+.s-card-info {
+  margin-top: 10px;
+  min-height: 100px;
+}
+
+.s-card-title {
+  font-size: 24px;
+  margin: 0px;
+}
+
+.s-card-sub-title {
+  font-size: 16px;
+  margin: 0px;
+}
+
+.success-msg {
+  color: #57A773;
+  padding: 10px 15px;
+}
+
+.err-msg {
+  color: #EE6352;
+  padding: 10px 15px;
+}
+
+html {
+  min-height:100%;
+  background: rgb(10, 0, 39);
+  background-size: cover;
+  @include prefix(background-size, cover, webkit moz ms);
 }
