--- a/src/index.css
+++ b/src/index.css
@@ -222,9 +222,9 @@
  body {
    font-family: 'Nunito Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-style: 400;
-   color: #333;
+   color: rgb(175, 175, 175);
    font-size: 16px;
-   background-color: #26c6da;
+   background-color: rgb(39, 39, 39);
  }
  h1,
  h2,
@@ -992,68 +992,3 @@
    vertical-align: top;
    max-width: 100%;
  }
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  box-shadow: 0px 0px 10px 4px rgba(124, 17, 151, 0.541);
-  background: linear-gradient(90deg, rgb(131, 0, 76), rgb(24, 0, 90));
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.s-card {
-  margin: 20px;
-}
-
-.s-card-image {
-  border-radius: 10px;
-  width: 600px;
-  height: 480px;
-  box-shadow: 0px 0px 10px 4px rgba(124, 17, 151, 0.541);
-}
-
-.s-card-info {
-  margin-top: 10px;
-  min-height: 100px;
-}
-
-.s-card-title {
-  font-size: 24px;
-  margin: 0px;
-}
-
-.s-card-sub-title {
-  font-size: 16px;
-  margin: 0px;
-}
-
-.success-msg {
-  color: #57A773;
-  padding: 10px 15px;
-}
-
-.err-msg {
-  color: #EE6352;
-  padding: 10px 15px;
-}
-
-html {
-  min-height:100%;
-  background: linear-gradient(90deg, rgb(131, 0, 76), rgb(24, 0, 90));
-  @include prefix(background-size, cover, webkit moz ms);
-}
-
-.galaxy_bg {
-  min-height:100%;
-  background:linear-gradient(0deg, rgba(255, 0, 150, 0.3), rgba(47, 11, 146, 0.671)), url(./assets/images/galaxy_bg.jpg);
-  background-size: cover;
-  @include prefix(background-size, cover, webkit moz ms);
-}
